# viral-ad-generator

./: .gitignore  README.md  config.toml  env-example  pyproject.toml
config/: config.toml
data/: viral_tweets_classified.csv
notebooks/: viral-ad-gen.ipynb
src/: fetch_and_classify.py  generate_prompts.py  generate_video.py
