[project]
name = "viral-ad-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.31.0",
    "ipykernel>=6.30.1",
    "ipython>=9.4.0",
    "ipywidgets>=8.1.7",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.31",
    "moviepy>=2.2.1",
    "openai>=1.101.0",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.2",
    "pytoml>=0.1.21",
    "requests>=2.32.5",
    "toml>=0.10.2",
]
